--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,35 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  --primary-light: #E5D5C7;
+  --primary-dark: #210B08;
+  --secondary: #8C6340;
+  --accent: #F8A0B9;
+}
+
+@font-face {
+  font-family: "MontserratItalic";
+  src: url("./fonts/Montserrat-Italics.ttf");
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("./fonts/Montserrat.ttf");
+}
+
+@font-face {
+  font-family: "Yanone";
+  src: url("./fonts/YanoneKaffeesatz.ttf");
+}
+
+a {
+  text-decoration: none;
+  color: inherit;        
+}
+
+nav {
+  font-family: "Montserrat";
+  display: flex;
+  gap: 30px;
+  justify-content: center;
 }
