--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root {
+:root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -7,6 +7,12 @@
   --primary-dark: #210B08;
   --secondary: #8C6340;
   --accent: #F8A0B9;
+}
+
+body, html {
+  max-width: 100vw;
+  height: 100vh;
+  background-color: var(--primary-light);
 }
 
 @font-face {
@@ -34,4 +40,6 @@ nav {
   display: flex;
   gap: 30px;
   justify-content: center;
+  font-size: 25px;
+  color: var(--secondary);
 }
