--- a/src/App.css
+++ b/src/App.css
@@ -36,10 +36,26 @@ a {
 }
 
 nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+nav > div {
   font-family: "Montserrat";
   display: flex;
-  gap: 30px;
-  justify-content: center;
+  gap: 2.5rem;
   font-size: 25px;
   color: var(--secondary);
+}
+
+nav svg {
+  position: absolute;
+  right: 5rem;
+  top: 2rem;
+}
+
+img {
+  padding: 3rem;
+  width: 600px;
 }
