--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,25 @@
 :root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
   --primary-light: #E5D5C7;
   --primary-dark: #210B08;
   --secondary: #8C6340;
   --accent: #F8A0B9;
+  --max-content-width: 1280px;
+  --page-padding: 2rem;
 }
 
 body, html {
-  max-width: 100vw;
-  height: 100vh;
+  font-family: "Montserrat", sans-serif;
+  width: 100%;
   background-color: var(--primary-light);
+  color: var(--primary-dark);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+
 }
 
 @font-face {
@@ -55,6 +62,16 @@ nav svg {
   top: 2rem;
 }
 
+.container {
+  max-width: var(--max-content-width);
+  margin: 0 auto;
+  padding: 0 var(--page-padding);
+}
+
+.section {
+  padding: 2rem 0;
+}
+
 .loading {
   font-family: "Montserrat";
   color: var(--primary-dark);
@@ -65,7 +82,7 @@ nav svg {
   color: var(--secondary);
   border: none ;
   border-radius: .8rem;
-  padding: .5rem .8rem;
+  padding: .8rem .9rem;
   margin: .8rem;
   cursor: pointer;
   font-family: "Montserrat";
@@ -112,11 +129,6 @@ nav svg {
   background-color: var(--accent);
 } 
 
-.coffee-beans-img {
-  padding: 3rem;
-  width: 600px;
-}
-
 .card-grid {
   padding: 7rem 0;
   display: grid;
@@ -147,13 +159,16 @@ nav svg {
   box-shadow: 0 5px 9px rgba(0, 0, 0, 0.2);
   background-color: var(--secondary);
   justify-self: center;
-  min-width: 300px;
-  min-height: 440px;
-  border-radius: 7rem;
+  width: 320px;
+  height: 460px;
+  padding: 1rem;
+  border-radius: 6rem;
   display: flex;
   flex-direction: column;
   font-family: "Montserrat";
   align-items: center;
+  justify-content: center;
+  gap: .8rem;
 }
 
 .cart-card {
@@ -169,7 +184,7 @@ nav svg {
   align-items: center;
 }
 
-.total , .total-title{
+.total {
   display: flex;
   align-items: center;
   justify-content: end;
@@ -187,30 +202,43 @@ nav svg {
   object-fit: contain;
   display: flex;
   align-items: center;
-
 }
 
 .product-info-cart {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10rem;
+  gap: 7rem;
 }
 
 .product-name-cart {
   width: 12rem;
+  height: 4rem; 
+  display: flex;
+  align-items: center;
+}
+
+.product-price-cart {
+  min-width: 110px;
+}
+
+.quantity-cart {
+  min-width: 50px;
 }
 
 .card img {
-  max-width: 180px;
-  height: auto;
-  padding: 1.3rem;
+  height: 230px;
+  width: auto;
+  padding: 1.5rem;
 }
 
 .product-info {
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  gap: .8rem;
+  text-wrap: wrap;
+  align-items: center;
+  text-align: center;
 }
 
 .product-name {
@@ -224,4 +252,95 @@ nav svg {
   color: var(--primary-light);
   font-size: 22px;
   font-weight: 400;
+}
+
+.hero-section {
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.shop-title {
+  font-family: "Yanone";
+  padding: 2rem 0 0 0;
+  font-size: 170px;
+  color: var(--primary-dark);
+  font-weight: 700;
+  position: relative;
+  z-index: 1;
+}
+
+.coffee-beans-img-1 {
+  width: 750px;
+  top: 2rem;
+  right: 79%;
+  z-index: 10;
+  position: absolute;
+  transform: rotate(-78deg);
+}
+
+.coffee-beans-img-2 {
+  width: 750px;
+  top: 12rem;
+  left: 74%;
+  z-index: 10;
+  position: absolute;
+  transform: rotate(40deg);
+}
+
+.hero-text {
+  font-family: "Montserrat";
+  font-size: 20px;
+  color: var(--primary-dark);
+  padding: 2rem 0;
+}
+
+.featured-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--primary-dark);
+  margin: 8rem 0 0 0;
+  width: 100vw;
+}
+
+.featured-product img {
+  width: 250px;
+}
+
+.product-bg {
+  background-color: var(--primary-light);
+  padding: 3rem 4rem;
+  border-radius: 12rem;
+}
+
+.featured-product {
+  display: flex;
+  gap: 4rem;
+  font-family: "Yanone";
+  font-weight: 500;
+  font-size: 30px;
+  color: var(--primary-dark);
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.month-featured-title {
+  color: var(--accent);
+  font-size: 160px;
+  width: 410px;
+  text-align: start;
+}
+
+.empty-cart {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 40px;
+  padding: 10rem 16rem;
 }
