--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,14 @@ nav {
   justify-content: center;
 }
 
+button {
+  background-color: transparent;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 nav > div {
   font-family: "Montserrat";
   display: flex;
@@ -77,7 +85,7 @@ nav svg {
   color: var(--primary-dark);
 }
 
-.add-to-cart {
+.general-button {
   background-color: var(--accent);
   color: var(--secondary);
   border: none ;
@@ -88,26 +96,34 @@ nav svg {
   font-family: "Montserrat";
   font-weight: 500;
   font-size: 20px;
+  transition: all .2s;
+  box-sizing: border-box;
 }
 
-.cart-number {
+.general-button:hover {
+  transform: scale(1.1);
+  background-color: var(--primary-dark);
   color: var(--accent);
-  font-size: 22px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.general-button:active {
+  transform: scale(1);
+}
+.cart-number {
+  color: var(--primary-dark);
+  font-size: 18px;
   font-weight: 500;
-  font-family: "Montserrat";
   width: 25px;
   height: 25px;
   border-radius: 14px;
   background-color: var(--primary-light);
   position: absolute;
-  right: 4.4rem;
-  top: 1.6rem;
+  right: 3.7rem;
+  top: 1.1rem;
+  padding: .3rem;
   z-index: 1;
-}
-
-.amount-btn button {
-  background-color: transparent;
-  border: none;
+  text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -128,6 +144,14 @@ nav svg {
   color: var(--secondary);
   background-color: var(--accent);
 } 
+
+.amount-btn button {
+  transition: transform .3s ease;
+}
+
+.amount-btn button:hover {
+  transform: scale(1.2);
+}
 
 .card-grid {
   padding: 7rem 0;
@@ -338,9 +362,26 @@ nav svg {
 
 .empty-cart {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-size: 40px;
+  font-size: 35px;
   padding: 10rem 16rem;
+  gap: 4rem;
 }
+
+.delete-button {
+  background-color: transparent;
+  transition: transform .3s ease;
+}
+
+.delete-button:hover {
+  transform: scale(1.2);
+}
+
+.checkout-buttons {
+  display: flex;
+  gap: 1rem;
+}
+
