Fix additional margin error on homepage when reloading

--- a/src/App.css
+++ b/src/App.css
@@ -279,7 +279,7 @@ nav svg {
 }
 
 .hero-section {
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
   display: flex;
   flex-direction: column;
