--- a/src/components/HomePage.module.css
+++ b/src/components/HomePage.module.css
@@ -24,7 +24,7 @@
 
 .coffeeBeansImg1 {
   width: 750px;
-  top: 2rem;
+  top: 1rem;
   right: 79%;
   z-index: 10;
   position: absolute;
@@ -33,7 +33,8 @@
 
 .shopTitle {
   font-family: "Yanone";
-  padding: 2rem 0 0 0;
+  text-align: center;
+  padding: 2rem 5rem;
   font-size: 170px;
   color: var(--primary-dark);
   font-weight: 700;
@@ -47,8 +48,9 @@
   font-family: "Montserrat";
   font-size: 20px;
   color: var(--primary-dark);
-  padding: 2rem 0;
+  padding: 2rem 16rem;
   text-align: center;
+  
 }
 
 .featuredContainer {
@@ -93,4 +95,43 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+
+@media (max-width: 1590px) {
+
+  .coffeeBeansImg1 {
+      top: 8rem;
+    }
+}
+
+@media (max-width: 768px) {
+  .coffeeBeansImg1 {
+    top: 8rem;
+  }
+
+  .heroText {
+    padding: 2rem;
+    width: 400px;
+  }
+
+}
+
+
+@media (max-width: 480px) {
+  .shopTitle {
+    font-size: 120px;
+    padding: .5rem 0;
+  }
+
+  .heroText {
+    padding: 1rem .5rem;
+  }
+
+  .coffeeBeansImg2 {
+    left: 70%;
+  }
+  
+  .coffeeBeansImg1 {
+    right: 70%;
+  }
 }
