--- a/src/components/HomePage.module.css
+++ b/src/components/HomePage.module.css
@@ -64,10 +64,10 @@
 
 .featuredProduct {
   display: flex;
-  gap: 4rem;
   font-family: "Yanone";
+  margin: 0 4rem;
   font-weight: 500;
-  font-size: 30px;
+  font-size: 2rem;
   color: var(--primary-dark);
   align-items: center;
   justify-content: center;
@@ -75,20 +75,21 @@
 }
 
 .featuredProduct img {
-  width: 250px;
+  width: 200px;
+  padding: 1.5rem 0;
 }
 
 .monthFeaturedTitle {
   color: var(--accent);
-  font-size: 160px;
-  width: 410px;
+  font-size: 8rem;
+  max-width: 350px;
   text-align: start;
 }
 
 .productBg {
   background-color: var(--primary-light);
-  width: 250px;
-  height: 500px;
+  width: 220px;
+  height: 460px;
   padding: 3rem 4rem;
   border-radius: 12rem;
   display: flex;
@@ -109,22 +110,38 @@
     top: 8rem;
   }
 
+  .shopTitle {
+    font-size: 8rem;
+    padding: 0;
+  }
+
   .heroText {
     padding: 2rem;
     width: 400px;
   }
 
+  .featuredProduct {
+    flex-direction: column;
+  }
+
+  .monthFeaturedTitle {
+    text-align: center;
+    max-width: 100%;
+    padding: 1rem 0;
+  }
 }
 
-
-@media (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 480px) {
   .shopTitle {
-    font-size: 120px;
-    padding: .5rem 0;
+    font-size: 5.5rem;
+    flex-wrap: wrap;
+    padding: 0 .5rem;
   }
 
   .heroText {
     padding: 1rem .5rem;
+    font-size: 1rem;
+    width: 230px;
   }
 
   .coffeeBeansImg2 {
@@ -134,4 +151,23 @@
   .coffeeBeansImg1 {
     right: 70%;
   }
+
+  .featuredProduct {
+    margin: 0;
+  }
+
+  .featuredProduct img {
+    width: 180px;
+    padding: 0;
+  }
+  .productBg {
+    max-width: 120px;
+    max-height: fit-content;
+  }
+
+  .monthFeaturedTitle {
+    font-size: 6rem;
+    padding: 3rem 0;
+  }
+
 }
