--- a/src/App.css
+++ b/src/App.css
@@ -54,5 +54,16 @@ a {
 
 
 
+@media (min-width: 320px) and (max-width: 480px) {
+  .container {
+    padding: 0;
+    max-width: 100%;  
+  }
+
+  
+}
+
+
+
 
 
