--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,18 +1,20 @@
 .cartCard {
   display: flex;
-  justify-content: start;
+  justify-content: space-evenly;
   background-color: var(--secondary);
-  height: 12rem;
+  height: 12.3rem;
   border-radius: 2rem;
   font-size: 20px;
+  padding: 0 2rem;
+  width: 94%;
   font-family: "Montserrat";
   color: var(--primary-light);
-  gap: 8rem;
   align-items: center;
+  align-self: center;
 }
 
 .cartCard img {
-  width: 105px;
+  width: 100px;
   height: auto;
   padding: 1rem 4rem;
   object-fit: contain;
@@ -22,14 +24,15 @@
 
 .productInfoCart {
   display: flex;
+  width: fit-content;
   align-items: center;
-  justify-content: center;
-  gap: 7rem;
+  justify-content: space-between;
+  gap: 2rem;
 }
 
 .productNameCart {
   width: 12rem;
-  height: 4rem; 
+  height: fit-content; 
   display: flex;
   align-items: center;
 }
@@ -44,7 +47,7 @@
 
 .checkoutButtons {
   display: flex;
-  gap: 1rem;
+  gap: 3rem;
 }
 
 .card {
@@ -110,7 +113,7 @@
   }
 
   .cartCard {
-    width: 90%;
+    width: 94%;
     height: 10rem;
     align-self: center;
     justify-content: space-between;
@@ -137,11 +140,6 @@
   .productPriceCart {
     font-size: 1rem;
     min-width: 82px;
-  }
-
-  .quantityCart {
-    font-size: 1rem;
-    min-width: 28px;
   }
 }
 
